Nuova versione: miglioramenti, per code smell